/*
 * Copyright 2018- The Pixie Authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package px.services;

option go_package = "certmgrpb";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// CertMgrService manages Vizier's proxy certs.
service CertMgrService {
  rpc UpdateCerts(UpdateCertsRequest) returns (UpdateCertsResponse);
}

// This request is from CloudConnector -> CrtMgr. In the future, we may
// want CrtMgr to be the one initiating the request when it detects that its certs are
// expiring.
message UpdateCertsRequest {
  string key = 1;
  string cert = 2;
}

message UpdateCertsResponse {
  bool ok = 1 [(gogoproto.customname) = "OK"];
}
